# mailsy

./: .flake8  .gitignore  README.md  pyproject.toml
mailsy/: __init__.py  email_template.py  main.py  utils.py
mailsy/templates/: email.html
tests/: test_mailsy.py
