[tool.poetry]
name = "mailsy"
version = "0.1.0"
description = ""
authors = ["Gautam Mishra <mishragautam96@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
mailsy = "mailsy.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.3.2"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
black = {version = "^21.6b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
